<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/timetable"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_therapy"
            android:icon="@drawable/medical_bag"
            android:title="@string/therapy" />
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/calendar_text"
            android:title="@string/journey" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/heart_pulse"
            android:title="@string/doctors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>



</menu>
