<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.selima.pharmapp.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iconApp"
            android:layout_gravity="center"
            android:src="@mipmap/icon"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginBottom="-4dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertCode"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/code"
            android:text=""
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:inputType="textCapSentences"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/inputfields"
            android:textSize="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insertPass"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/pass"
            android:text=""
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/inputfields"
            android:textSize="25dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonobject"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textSize="25dp"
            android:id="@+id/go"
            />
    </LinearLayout>

</RelativeLayout>
